@@ -119,7 +119,7 @@ public class ChangeOwnerParams {
 
         public ChangeOwnerParams.Builder owner(String owner) {
             ValidateUtils.checkNullParameter(owner == null, "owner is null");
-            ValidateUtils.checkIllegalParameter(owner.trim().isEmpty(), "owner not specified");
+            ValidateUtils.checkIllegalParameter(owner.isBlank(), "owner not specified");
             this.owner = owner;
             return this;
         }
